[package]
name = "zenlink-protocol"
version = "0.4.4"
authors = ["Zenlink Developers"]
edition = "2021"
license = "Apache 2.0"

[package.metadata.docs.rs]
targets = ['x86_64-unknown-linux-gnu']

[dependencies]
log = { version = "0.4.14", default-features = false }
serde = { version = "1.0.119", optional = true }
# alias "parity-scale-code" to "codec"
codec = { package = "parity-scale-codec", version = "3.4.0", default-features = false }
scale-info = { version = "2.1.1", default-features = false, features = [
  "derive",
] }

# Substrate
frame-benchmarking = { git = "https://github.com/paritytech/substrate", default-features = false, optional = true, branch = "polkadot-v0.9.37" }
sp-core = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "polkadot-v0.9.37" }
frame-support = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "polkadot-v0.9.37" }
frame-system = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "polkadot-v0.9.37" }
sp-runtime = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "polkadot-v0.9.37" }
sp-std = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.37", default-features = false }
sp-arithmetic = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.37", default-features = false }
pallet-assets = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.37", default-features = false, optional = true }
pallet-balances = { git = 'https://github.com/paritytech/substrate', default-features = false, branch = 'polkadot-v0.9.37' }

# Polkadot
xcm = { git = "https://github.com/paritytech/polkadot", branch = "release-v0.9.37", default-features = false }
xcm-executor = { git = "https://github.com/paritytech/polkadot", branch = "release-v0.9.37", default-features = false }

# Cumulus
cumulus-primitives-core = { git = "https://github.com/paritytech/cumulus", default-features = false, branch = "polkadot-v0.9.37" }

orml-traits = { git = "https://github.com/manta-network/open-runtime-module-library", branch = "polkadot-v0.9.37", default-features = false }
orml-tokens = { git = "https://github.com/manta-network/open-runtime-module-library", branch = "polkadot-v0.9.37", default-features = false }

pallet-asset-manager = { git = "https://github.com/manta-network/Manta", branch = "zenlink_benchmark", default-features = false, optional = true }
manta-primitives = { git = "https://github.com/manta-network/Manta", branch = "zenlink_benchmark", default-features = false }

[dev-dependencies]
sp-core = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "polkadot-v0.9.37" }
sp-io = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "polkadot-v0.9.37" }


[features]
default = ["std"]
std = [
  "log/std",
  "serde",
  "codec/std",
  "scale-info/std",
  "sp-core/std",
  "frame-support/std",
  "frame-system/std",
  "sp-runtime/std",
  "sp-std/std",
  "sp-arithmetic/std",
  "pallet-balances/std",
  "pallet-assets/std",

  "xcm/std",
  "xcm-executor/std",
  "cumulus-primitives-core/std",

  "orml-traits/std",
  "orml-tokens/std",

  "manta-primitives/std",
  "pallet-asset-manager/std",
]

runtime-benchmarks = [
  "frame-benchmarking",
  "pallet-assets/runtime-benchmarks",
  "pallet-asset-manager",
]
try-runtime = ["frame-support/try-runtime"]
